--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,6 @@
   </head>
   <body class="bg-gradient-to-br from-pink-100 via-purple-100 to-indigo-100 text-gray-800 min-h-screen">
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
