Normalize line endings

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#f0caff" />
     <meta name="description" content="Configure your pastel ghost-themed Stremio MDBList Addon" />
-    <title>GhostList Config</title>
+    <title>GhostLists Config</title>
   </head>
   <body class="bg-gradient-to-br from-pink-100 via-purple-100 to-indigo-100 text-gray-800 min-h-screen">
     <div id="root"></div>
-    <script type="module" src="./src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
